# poc-netbird-cron

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/netbird/: events.rs  mod.rs
