[package]
name = "poc-netbird-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.0", features = ["env", "derive"] }
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["json"] }
rust-s3 = "0.33.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde"] }
